# stack-set-helper-action

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: lint.yml  pre-commit-checks.yml  run-tests.yml
stack_set_helper_action/: exceptions.py  main.py  stackset_helper.py
tests/: test_main.py  test_stackset_helper.py
