[tool.poetry]
name = "stack-set-helper-action"
version = "0.1.0"
description = ""
authors = ["Leo Alves <leo@adatree.com.au>"]
readme = "README.md"
packages = [{include = "stack_set_helper_action"}]

[tool.poetry.dependencies]
python = "^3.12.6"
boto3 = "^1.24.46"


[tool.poetry.dev-dependencies]
flake8 = "^7.1.0"
pylint = "^2.17.5"
pytest = "^7.4.2"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
